Add changelog, tweak release-it, fix .travis.yml

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,18 +1,22 @@
 {
   "hooks": {
+    "before:init": ["npm run lint", "npm test"],
     "after:bump": "node_modules/.bin/auto-changelog -p"
   },
   "git": {
     "commitMessage": "Release ${version}",
     "commitArgs": ["-S"],
     "tagAnnotation": "Release ${version}",
-    "tagArgs": ["-s"]
+    "tagArgs": ["-s"],
+    "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to}"
   },
   "npm": {
     "publish": true
   },
   "github": {
+    "release": true,
     "releaseName": "metalsmith-handlebars-x ${version}",
+    "releaseNotes": true,
     "tokenRef": "GITHUB_TOKEN"
   }
 }
