--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "nyc ospec",
+    "test": "nyc mocha ./tests",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint --fix .",
     "lint:check": "eslint --fix-dry-run .",
     "release": "release-it",
-    "coveralls": "nyc report --reporter=text-lcov > ./coverage.info && cat ./coverage.info | coveralls"
+    "coverage": "nyc report --reporter=text-lcov > ./coverage.info"
   },
   "directories": {
     "test": "./tests",
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "auto-changelog": "^2.4.0",
-    "coveralls": "^3.1.1",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
@@ -53,8 +52,8 @@
     "metalsmith": "^2.4.1",
     "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-layouts": "^2.3.1",
+    "mocha": "^9.2.0",
     "nyc": "^15.1.0",
-    "ospec": "^4.1.1",
     "prettier": "^2.5.1",
     "release-it": "^14.12.4"
   },
