--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ jobs:
         node: ['12', '14', '16']
     name: Testing Node ${{ matrix.node }} on ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
@@ -30,7 +30,7 @@ jobs:
         run: npm run coverage
 
       - if: matrix.os == 'ubuntu-latest' && matrix.node == '16'
-        uses: coverallsapp/github-action@v1.1.2
+        uses: coverallsapp/github-action@1.1.3
         with:
           github-token: ${{ github.token }}
           path-to-lcov: ./coverage.info
