--- a/package.json
+++ b/package.json
@@ -43,19 +43,19 @@
     "handlebars": "^4.7.7"
   },
   "devDependencies": {
+    "@metalsmith/layouts": "^2.6.0",
     "auto-changelog": "^2.4.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "handlebars-layouts": "^3.1.4",
     "jstransformer-handlebars": "^1.2.0",
     "metalsmith": "^2.4.1",
     "metalsmith-discover-partials": "^0.1.2",
-    "metalsmith-layouts": "^2.3.1",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.1",
-    "release-it": "^14.12.4"
+    "prettier": "^2.7.1",
+    "release-it": "^15.5.0"
   },
   "peerDependencies": {
     "metalsmith": "^2.4.1"
